# dempathy-linear

./: .gitignore  .gitmodules  CMakeLists.txt  Empathy  LICENSE  README.md  build.sh  dempathy  linear  run.sh
DEmpathy/: DoonLight.cpp  __main__.cpp
dempathy-linear/: __main__.cpp  empathy_linear.cpp  empathy_linear.h
linear/: __main__.cpp
